fix citizen ui wrap  issue

--- a/packages/css/src/pages/employee/index.scss
+++ b/packages/css/src/pages/employee/index.scss
@@ -122,6 +122,7 @@
       width: calc(100vw - 210px);
       padding-top: 80px;
       margin-left: 210px;
+      flex-wrap: wrap;
     }
   }
 }
